Fix spacing and sixe of overlay element > Relates #38

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   --basecolor: hsl(0, 0%, 100%);
   --accentcolor: hsl(288, 100%, 85%);
   --opaquebackground: hsla(0, 0%, 100%, 0.8);
-  --logo: hsl(175, 71%, 41%);
+  --logo: hsl(0, 0%, 0%);
   --shadow: hsla(0, 0%, 0%, 0.5);
 }
 
@@ -103,6 +103,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 0rem;
+  padding-top: 1rem;
 }
 
 .movie__title {
@@ -126,7 +127,8 @@ body {
   position: absolute;
   z-index: -1;
   height: 3rem;
-  width: 8rem;
+  width: 100%;
+  border-radius: 50% 50%;
 }
 
 .movie__title--text{
@@ -161,6 +163,9 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: 
     "one two three four";
+  }
+  .movie {
+      padding-top: 3rem;
   }
   .movie__title {
     height: 10rem;
